Corrected margin spacing issue on play button

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ select {
 
 .play {
   padding: 1rem 2rem;
-  margin-top: 3rem;
+  margin: 3rem;
   font-size: 1.5rem;
   background: #c5c5c5;
   color: #0b0c10;
